Add Cluster Name and Region columns to tables
- Added cluster_name and region columns to dashboard and top_savings tables
- Modified aa_database.py to include cluster_name and region in SQL queries
- Updated templates to display cluster name and region with N/A fallback
- Reversed color coding: positive savings in red, negative in green
- Removed Created column from all tables
- Added rcp/ directory to .gitignore (contains sensitive credentials)

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ ENV/
 # Database (optional - uncomment if you don't want to commit the database)
 # aa_report_cache.db
 
+# RCP directory (contains sensitive credentials and automation scripts)
+rcp/
