--- a/.dockerignore
+++ b/.dockerignore
@@ -60,6 +60,10 @@ test_*.py
 *.sqlite
 *.sqlite3
 
+# RCP automation scripts (not needed in Docker, but keep aa_database.py)
+rcp/aa_report_automation.py
+rcp/__pycache__/
+
 # Other
 *.iml
 workspace.xml
