Fix Cloud Run module import error - move files to root directory
- Move aa_database.py from rcp/ to root directory
- Move aa_report_automation.py from rcp/ to root directory
- Update app.py import: from rcp.aa_database to from aa_database
- Update .dockerignore to exclude aa_report_automation.py and rcp/ folder
- Update documentation: README.md, DEPLOYMENT.md, CHANGELOG.md
- Fixes ModuleNotFoundError: No module named 'rcp' in Cloud Run

--- a/.dockerignore
+++ b/.dockerignore
@@ -39,9 +39,11 @@ wheels/
 .env
 .env.local
 
-# Documentation
-README.md
-*.md
+# Documentation (exclude from root, but keep rcp/README.md)
+/README.md
+/CHANGELOG.md
+/DEPLOYMENT.md
+/ENVIRONMENT_VARIABLES.md
 
 # Tests
 tests/
@@ -60,9 +62,9 @@ test_*.py
 *.sqlite
 *.sqlite3
 
-# RCP automation scripts (not needed in Docker, but keep aa_database.py)
-rcp/aa_report_automation.py
-rcp/__pycache__/
+# RCP automation scripts (not needed in Docker)
+aa_report_automation.py
+rcp/
 
 # Other
 *.iml
