--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-# Optional: For .env file support
+Flask>=3.0.0
 python-dotenv>=1.0.0
-
-# Note: All other dependencies are built-in Python modules
-# - sqlite3, json, datetime, logging (built-in)
-# - dataclasses, typing, pathlib (built-in Python 3.7+)
-# - subprocess, os, sys, time (built-in)
-# - rcp_client (already installed in system)
+gunicorn>=21.2.0
